--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ img.fullscreen{width: 100%; height: auto; margin-bottom: 20px;}
 
 	<div data-role="header" data-theme="b">
 		<a href="#myPanel"  style="position:absolute; top:20px;"><img src="images/icon_menu.png" style="width:30px; height:30px;" /></a>
-		<h1>Home</h1>
+		<h1>About</h1>
 		<center><span style="font-size:10px; color:#b5df6c;">HITLAR KUMAR RAJBHANDARI</span></center>
 	</div><!-- /header -->
 
