--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-
+<script src="mobile-site-custom-jqm-defaults.js"></script>
 
 <script type="text/javascript">
 $(document).on('pageinit',function(){
