--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ img.fullscreen{width: 100%; height: auto; margin-bottom: 20px;}
 <h3 style="color:#7fc107;">I am Hitlar Rajbhandari, a freelance web designer/developer.</h3>
 
 <p>
-I am an energetic and passionate person who enjoys a challenge and achieving personal goals. The opportunity to learn new skills and work with new technologies is mainly attractive to me. I enjoy working on my own initiative or in a team. In short, I am reliable, hardworking and eager to learn and have a genuine interest in web designing/developing and hence looking to develop my career as a web designer/developer.
+I am an energetic and passionate person who enjoys a challenge and achieving personal goals. The opportunity to learn new skills and work with new technologies is mainly attractive to me. I enjoy working on my own initiative or in a team.</p><p></p> In short, I am reliable, hardworking and eager to learn and have a genuine interest in web designing/developing and hence looking to develop my career as a web designer/developer.
 
 </p>
 
